fix image stretching issue

--- a/client/src/app/shared/post-feed-item/post-feed-item.component.css
+++ b/client/src/app/shared/post-feed-item/post-feed-item.component.css
@@ -87,4 +87,5 @@
 .image {
   width: 100%;
   max-height: 450px;
+  object-fit: contain;
 }
